fix formatting on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 .App {
     text-align: center;
+    overflow: scroll;
 }
 
 .App-logo {
