--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -278,7 +278,7 @@ input:focus {
     margin: 2% 4.5%;
     width: 95%;
     position: absolute;
-    bottom: 7.5%;
+    bottom: 5%;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -290,4 +290,10 @@ input:focus {
     right: 15px;
     bottom: 10px;
     z-index: 100000;
+}
+
+/*----------------------------------------------------------------------------*/
+/* 4. Smaller screens
+/*----------------------------------------------------------------------------*/
+@media (max-width: 760px) {
 }
